--- a/creditos.html
+++ b/creditos.html
@@ -54,7 +54,7 @@
           displayCredits(); // Llama a displayCredits después de que la imagen se haya cargado y dibujado
         };
 
-        mySound = new sound("sound/dorado.mp3");
+        mySound = new sound("sound/audio_final.mp3");
         mySound.play();
       }
 
