--- a/juego.html
+++ b/juego.html
@@ -97,7 +97,7 @@
         0,
         "background"
       );
-      mySound = new sound("sound/dorado.mp3");
+      mySound = new sound("sound/audio_final.mp3");
       myScore = new component("30px", "Consolas", "white", 280, 40, "text");
       myLives = new component("30px", "Consolas", "white", 20, 40, "text"); // Mostrar vidas
       mySound.play();
