--- a/scores.html
+++ b/scores.html
@@ -61,6 +61,7 @@
         scores.forEach((score, index) => {
           ctx.fillText(`#${index + 1}: ${score}`, canvas.width / 2, 90 + index * 40);
         });
+        // test
       }
 
       function sound(src) {
