--- a/juego.html
+++ b/juego.html
@@ -73,7 +73,7 @@
     <label>Volumen
       <input type="range" min="0" max="1" step="0.1" onchange="updateVolume(this.value)" />
     </label>
-    <button onclick="alert('Scores coming soon!')">Scores</button>
+    <button onclick="window.location.href='scores.html'">Scores</button>
   </div>
   <script>
     var myGamePiece,
