--- a/scores.html
+++ b/scores.html
@@ -21,9 +21,16 @@
         margin-top: 20px;
       }
       .btn-container button {
-        border-radius: 5px;
-        height: 50px;
-        width: 200px;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      margin: 10px auto;
+      padding: 10px 20px;
+      font-size: 18px;
+      background-color: #1e7ddc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
       }
     </style>
   </head>
@@ -31,7 +38,9 @@
     <canvas id="backgroundCanvas"></canvas>
     <div class="btn-container">
       <button onclick="window.location.href='juego.html'">Jugar de Nuevo</button>
+      <button id="inicio" onclick="window.location.href='inicio.html'">Inicio</button>
       <button onclick="window.location.href='creditos.html'">Créditos</button>
+
     </div>
 
     <script>
